refactor: 代码优化